# IAD591_Smart_Medical_App

./: .gitignore  App.js  App.tsx  README.md  package-lock.json  package.json
ai/: .env.example  .gitignore  README.md  pyproject.toml
ai/data/raw/: README.md
ai/notebooks/: adherence_analysis.ipynb
ai/src/smart_medical_ai/: __init__.py  config.py  main.py
ai/src/smart_medical_ai/ml/: __init__.py  features.py  train.py
ai/src/smart_medical_ai/ml/saved/: README.md
ai/src/smart_medical_ai/models/: __init__.py  adherence.py  chat.py
ai/src/smart_medical_ai/repos/: __init__.py  backend_db.py  database.py
ai/src/smart_medical_ai/routers/: __init__.py  analytics.py  chat.py
ai/src/smart_medical_ai/services/: __init__.py  analytics.py  chat_chain.py  chat_context.py  predictor.py
ai/tests/unit/: test_analytics.py  test_predictor.py
back-end/: README.md  env.example  main.py  seed_demo.py  smart_medicine.db
mobile/: App.tsx  app.json  env.example  package-lock.json  package.json  tsconfig.json
mobile/src/components/: AIPredictionCard.tsx  BottomNav.tsx  InAppNotificationBanner.tsx  TopBar.tsx
mobile/src/screens/: Analytics.tsx  ChatScreen.tsx  DoctorDashboard.tsx  DoctorPatientReport.tsx  History.tsx  HomeDashboard.tsx  LoginScreen.tsx  (+4 more)
src/components/: BottomNav.js  Button.js  Button.tsx  Card.js  Card.tsx  TopBar.js
src/screens/: Analytics.js  Analytics.tsx  History.js  History.tsx  HomeDashboard.js  LoginScreen.js  MedicationReminder.js  Notifications.js  Notifications.tsx  Profile.js  Profile.tsx  ScanPrescription.js
src/styles/: theme.js
(+6 files in other folders)
